--- a/.github/workflows/request_approval.yml
+++ b/.github/workflows/request_approval.yml
@@ -1,47 +1,33 @@
-name: Request Approval
+name: Deploy on PR Approval
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    types: [opened, reopened]
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Check PR for label and approval
+        uses: actions/github-script@v6
         with:
-          java-version: '1.8'
-          distribution: 'adopt'
-          cache: maven
-      - name: Build with Maven
-        run: echo "Build successful"
-
-  deployment:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Request approval
-        uses: peter-evans/create-issue-from-file@v2
-        with:
-          token: ${{ secrets.WORKFLOW_SECRET }}
-          assignees: geo4u
-          title: "Please review and approve deployment"
-          body: "Please review and approve this deployment by adding the label 'approved'"
-      - name: Wait for approval
-        uses: wei/pull-request-await@v2
-        with:
-          github_token: ${{ secrets.WORKFLOW_SECRET }}
-          label: approved
-
-  store-artifact:
-    needs: deployment
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Store artifact
-        run: echo "Artifact stored"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { data: pullRequest } = await github.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number
+            });
+            const { data: reviews } = await github.pulls.listReviews({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number
+            });
+            const approvedReview = reviews.find(review => review.user.login === 'geo4u' && review.state === 'APPROVED');
+            const hasLabel = pullRequest.labels.some(label => label.name === 'ready-to-deploy');
+            if (approvedReview && hasLabel) {
+              console.log('PR approved and labeled, deploying');
+              // Add deployment steps here
+            } else {
+              console.log('PR not ready to deploy');
+            }
