--- a/.github/workflows/request_approval.yml
+++ b/.github/workflows/request_approval.yml
@@ -1,5 +1,3 @@
-name: Deploy on Approval
-
 on:
   pull_request:
     types: [opened, reopened, synchronize, labeled, unlabeled]
@@ -7,41 +5,35 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           ref: main
 
-      - name: Check if PR is approved and labeled
+      - name: Request approval
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.WORKFLOW_SECRET }}
           script: |
-            try {
-              const { data: pullRequest } = await github.pulls.get({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: context.payload.pull_request.number
-              });
-              const { data: reviews } = await github.pulls.listReviews({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: context.payload.pull_request.number
-              });
-              const approvedReview = reviews.find(review => review.user.login === 'geo4u' && review.state === 'APPROVED');
-              const hasLabel = pullRequest.labels.some(label => label.name === 'ready-to-deploy');
-              if (approvedReview && hasLabel) {
-                console.log('PR approved and labeled, deploying');
-                // Add deployment steps here
-              } else {
-                console.log('PR not ready to deploy');
-              }
-            } catch (error) {
-              console.log(error.message);
+            const { data: pullRequest } = await github.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number
+            });
+            const { data: reviews } = await github.pulls.listReviews({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number
+            });
+            const approvedReview = reviews.find(review => review.user.login === 'geo4u' && review.state === 'APPROVED');
+            const hasLabel = pullRequest.labels.some(label => label.name === 'ready-to-deploy');
+            if (approvedReview && hasLabel) {
+              console.log('PR approved and labeled, deploying');
+              // Add deployment steps here
+            } else {
+              console.log('PR not ready to deploy');
             }
-          debug: false
-          user-agent: actions/github-script
-          result-encoding: json
-          retries: 3
-          retry-exempt-status-codes: 400, 401, 403, 404, 422
+          },
+          result-encoding: string
