--- a/.github/workflows/owner_auto-merge_pull_request.yml
+++ b/.github/workflows/owner_auto-merge_pull_request.yml
@@ -23,32 +23,30 @@ jobs:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
 
+  ChangeLog_Enforcer:
+    runs-on: ubuntu-latest
+    needs: [auto-merge]
+    permissions:
+      contents: write
+    steps:
+      - name: Python Action
+        uses: jge162/Action-workflows@1.0.1
 
-ChangeLog_Enforcer:
-  runs-on: ubuntu-latest
-  needs: [auto_merge]
+      - name: Get pull request number
+        id: get_pull_request_number
+        run: echo "::set-output name=pull_request_number::${{ github.event.number }}"
 
-  permissions:
-    contents: write
+      - name: Update Changelog
+        uses: stefanzweifel/changelog-updater-action@v1
+        with:
+          path-to-changelog: CHANGELOG.md
+          latest-version: ${{ github.ref }}
+          release-notes: |
+            Pull request number for the release is: [#${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})
 
-  steps:
-    - name: Python Action
-      uses: jge162/Action-workflows@1.0.1
-
-    - name: Get pull request number
-      id: get_pull_request_number
-      run: echo "::set-output name=pull_request_number::${{ github.event.number }}"
-
-    - name: Update Changelog
-      uses: stefanzweifel/changelog-updater-action@v1
-      with:
-        path-to-changelog: CHANGELOG.md
-        latest-version: ${{ github.ref }}
-        release-notes: |
-          Pull request number for the release is: [#${{ steps.get_pull_request_number.outputs.pull_request_number }}](${{ github.event.pull_request.html_url }})
-    - name: Commit updated CHANGELOG
-      uses: stefanzweifel/git-auto-commit-action@v4
-      with:
-        branch: main
-        commit_message: Update CHANGELOG
-        file_pattern: CHANGELOG.md
+      - name: Commit updated CHANGELOG
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
+          commit_message: Update CHANGELOG
+          file_pattern: CHANGELOG.md
