--- a/.github/workflows/github_health_check.yml
+++ b/.github/workflows/github_health_check.yml
@@ -22,7 +22,7 @@ jobs:
         
       - name: Append message to commit log
         run: |
-          echo "$(date): $(cat commit_message.txt)" >> COMMITLOG.md
+          echo -e "$(date): $(cat commit_message.txt)\n" >> COMMITLOG.md
           git config --global user.email "${{ secrets.EMAIL }}"
           git config --global user.name "<Jeremy Escobar>"
           git add COMMITLOG.md
