--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -30,7 +30,7 @@ jobs:
     - run: |
         echo "Run, Build Application using scripts"
         python3 -c "
-        scripts = [ './resources/GitHub_action_tester.py']
+        scripts = [ './resources/test.py']
         for script in scripts:
             with open(script, 'r') as file:
                 exec(file.read())
