--- a/.github/workflows/maintenance_pull_request.yml
+++ b/.github/workflows/maintenance_pull_request.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Create report file
-        run: date +%s > report.txt
+      - name: Make changes to pull request
+        run: date "+%Y-%m-%d %H:%M:%S" > report.txt
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
