--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -1,3 +1,5 @@
+name: My GitHub Action
+
 on:
   push:
     branches:
@@ -12,3 +14,14 @@ on:
       (!startsWith(github.ref, 'refs/tags/') && 
       contains(github.event.head_commit.modified, 'common/') || 
       contains(github.event.head_commit.modified, 'myservice/'))
+
+jobs:
+  my-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Run my command
+        run: |
+          # Add your command here
