--- a/.github/workflows/Test.yaml
+++ b/.github/workflows/Test.yaml
@@ -3,19 +3,20 @@ name: My GitHub Action
 on:
   workflow_dispatch:
 
-  push:
+    push:
     branches:
       - main
     paths:
       - "common/**"
       - "myservice/**"
+    if: "!startsWith(github.ref, 'refs/tags/')"
+
+  push:
     tags:
       - "*"
-    if: |
-      (startsWith(github.ref, 'refs/tags/')) || 
-      (!startsWith(github.ref, 'refs/tags/') && 
-      contains(github.event.head_commit.modified, 'common/') || 
-      contains(github.event.head_commit.modified, 'myservice/'))
+    branches:
+      - main
+    if: "startsWith(github.ref, 'refs/tags/')"
 
 jobs:
   my-job:
