--- a/.github/workflows/Spelling.yml
+++ b/.github/workflows/Spelling.yml
@@ -51,7 +51,8 @@ jobs:
           experimental_apply_changes_via_bot: 1
           use_sarif: 1
           extra_dictionary_limit: 10
-          excludes-file: excludes.txt
+          excludes-file: ./.github/actions/spelling/excludes.txt
+          patterns-file: ./.github/actions/spelling/patterns.txt
 
   comment-pr:
     name: Report (PR)
