--- a/.github/workflows/GitHub_Status.yml
+++ b/.github/workflows/GitHub_Status.yml
@@ -25,7 +25,7 @@ jobs:
           cd ./resources/API
           response=$(curl -s https://kctbh9vrtdwd.statuspage.io/api/v2/status.json)
           status=$(echo $response | jq -r '.status.indicator')
-          echo -e "\n$(date): GitHub Actions API status: $status" >> ../../resources/COMMITLOG.md
+          echo -e "\n$(date): GitHub Actions API status: $status" >> ../../COMMITLOG.md
         env:
           TOKEN: ${{ secrets.WORKFLOW_SECRET }}
 
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --global user.email "${{ secrets.EMAIL }}"
           git config --global user.name "<jge162>"
-          git add COMMITLOG.md
+          git add ./resources/COMMITLOG.md
           git commit -m "Automated commit: Update API status in commitlog"
           git push
