--- a/.github/workflows/GitHub_Status.yml
+++ b/.github/workflows/GitHub_Status.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --global user.email "${{ secrets.EMAIL }}"
           git config --global user.name "<jge162>"
-          git add COMMITLOG.md
+          git add .
           git commit -m "Automated commit: Update API status in commitlog"
           git push
